notepadpp 7.7.1-4:
	* variable $PathToExe$ is back
	* warning on unexpected previous install directory is now comment
	* property link_desktop renamed to desktop-link
	* documentation updated
	* added changelog from previous code base
	* adjusted description in control (en/de)
	* pystache: use UTF-8 encoding
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-02 15:00:23 +0200
	
notepadpp 7.7.1-3:
	* fixed property names and scripts for custom scripts
	* Makefile: new default for ALLINC is true
	* extraction of language files from installer
	* new icon for application configuration
	* updated 7z binaries
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-01 16:23:46 +0200

notepadpp 7.7.1-2:
	* product update --> 7.7.1
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-06-20 06:56:55 +0200

notepadpp 7.7-2:
	* product update --> 7.7
	* complete revision of package (ready for o4i)
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-05-21 09:01:26 +0200


# Changelog from previous code base:

notepadpp (7.7-060)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  20.5.2019
 
notepadpp (7.6.6-059)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  4.4.2019
 
notepadpp (7.6.5-058)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  1.4.2019
 
notepadpp (7.6.4-057)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  6.3.2019
 
notepadpp (7.6.3-056)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  28.01.2019
 
notepadpp (7.6.2-055)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  01.01.2019
 
notepadpp (7.6.1-054)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  13.12.2018
 
notepadpp (7.6-053)
	* minor update, only .exe changed
	* new 04i.png  9/2018
 -- Detlef Krummel <krummel@gei.de>  14.11.2018
 
notepadpp (7.5.9-052)
	* minor update, only .exe changed
	* new 04i.png  9/2018
 -- Detlef Krummel <krummel@gei.de>  15.10.2018
 